--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-: Test-Build
+name: Test-Build
 on:
   push:
     branches:
@@ -31,14 +31,28 @@ jobs:
       # Run the POSTMAN collection
       - name: Run POSTMAN collection on real time
         run: |
-          newman run MinhaColecao.postman_collection.json -e workspace.postman_environment.json 
+          newman run MinhaColecao.postman_collection.json -e workspace.postman_gçobals.json 
       # Run the POSTMAN collection
       - name: Run POSTMAN collection
         run: |
-          newman run MinhaColecao.postman_collection.json -e workspace.postman_environment.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
+          newman run MinhaColecao.postman_collection.json -e workspace.postman_globals.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
       # Upload the contents of Test Results directory to workspace
       - name: Output the run Details
         uses: actions/upload-artifact@v2
         with:
           name: RunReports
           path: testResults
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
